--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
 
     <title>La panthère, entreprise de web design sur Lyon</title>
 
@@ -83,7 +78,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="icone web design" src="img/title.png" />
+				<p class="paragraphe">L'agence La Panthère est une agence de web design qui aide les entreprises à devcenir attractives et visibles sur internet</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -103,7 +98,7 @@
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
 				<h3 class="mg-md text-center">
-					&nbsp;Stratégie
+					Stratégie
 				</h3>
 				<p class="text-center ">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -120,12 +115,14 @@
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
 			</div>
-		</div>
-		<div class="row voffset-lg voffset">
-			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					<p class="paragraphe">"L'agence La Panthère est une excellente agence web! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</p>
+					<p class="paragraphe2">Maxime Guibard, PDG de À vos fourchettes</p>
+				</div>
 			</div>
+		</div>
+
 		</div>
 	</div>
 </section>
@@ -153,7 +150,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<p class="paragraphe">Nous travaillons avec beaucoup de clients, voici nos réalisations</p>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -244,45 +241,6 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-				<div class="row">
-					<div class="col-sm-4">
-						Partenaires
-							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-							</ul>		
-					</div>
-					<div class="col-sm-4">
-						Annuaires liste 1
-						<ul>
-							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="123seoture.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-							<li><a href="listeseo.com">listeseo.com</a></li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						Annuaires liste 2
-						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-						</ul>
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -291,7 +249,12 @@
 
 </div>
 <!-- Principal conteneur END -->
-    
+<script src="./js/jquery-2.1.0.js" defer></script>
+<script src="./js/bootstrap.js" defer></script>
+<script src="./js/blocs.js" defer></script>
+<script src="./js/jquery.touchSwipe.js" defer></script>
+<script src="./js/gmaps.js" defer></script>
+
 
 </body>
 </html>
