--- a/nous-contacter.html
+++ b/nous-contacter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Découvrez votre agence de web design sur Lyon. Une entreprise créative, interactive et à l'écoute de vos demandes. Trouvez tout notre savoir-faire sur notre site-web.">
-    <meta name="viewport" conte-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -101,7 +101,7 @@
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
 					</button>
-				</form>ßß
+				</form>
 			</div>
 			<div class="col-sm-6">
 				<p>
@@ -129,22 +129,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html" title="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html" title="Dribble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html" title="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
@@ -157,10 +157,10 @@
 </div>
 <!-- Principal conteneur END -->    
 <script src="./js/jquery-2.1.0.js" defer></script>
-<script src="./js/bootstrap.js"defer></script>
-<script src="./js/blocs.js"defer></script>
-<script src="./js/jqBootstrapValidation.js"defer></script>
-<script src="./js/formHandler.js"defer></script>
+<script src="./js/bootstrap.js" defer></script>
+<script src="./js/blocs.js" defer></script>
+<script src="./js/jqBootstrapValidation.js" defer></script>
+<script src="./js/formHandler.js" defer></script>
 
 </body>
 </html>
